--- a/index.html
+++ b/index.html
@@ -35,30 +35,32 @@
             </div>
             <p id="summary">Graduated in 2010 from Baylor University with a Supply Chain degree.
                 Nash Peterson is a coding student with the dream of becoming a professional full-stack developer, after his completion of the U of M coding camp.</p>
+            
+            </div>  
+        </section>
+        <section class="work" id="work">
             <div class="header">
                 <h2 id="work">Work</h2>
-            </div>  
-        <section class="work" id="work">
-             
-            <div id="image">
                 <a href="https://teutonicted.github.io/semantic-html/"><img src= "./assets/image-1.jpg" alt="Semantic Tags" id="image-1" /></a>
-                <h3 id = "title">Semantic Tags</h3>
+                    <h3 id = "title">Semantic Tags</h3>
             </div>
-            <div id="image">
-                <img src = "./assets/image-2.jpg" />
-                <h3 id = "title">Responsive Design</h3>
-            </div>
-            <div id="image">
-                <img src = "./assets/image-4.jpg" /> 
-                <h3 id = "title">JavaScript</h3>
-            </div>
-            <div id="image">
-                <img src = "./assets/image-5.jpg" />
-                <h3 id = "title">React</h3>
-            </div>
-            <div id="image">
-                <img src = "./assets/image-6.jpg" />
-                <h3 id = "title">MY SQL</h3> 
+            <div class="images">
+                <div id="image">
+                    <img src = "./assets/image-2.jpg" />
+                    <h3 id = "title">Responsive Design</h3>
+                </div>
+                <div id="image">
+                    <img src = "./assets/image-4.jpg" /> 
+                    <h3 id = "title">JavaScript</h3>
+                </div>
+                <div id="image">
+                    <img src = "./assets/image-5.jpg" />
+                    <h3 id = "title">React</h3>
+                </div>
+                <div id="image">
+                    <img src = "./assets/image-6.jpg" />
+                    <h3 id = "title">MY SQL</h3> 
+                </div>
             </div>
         </section>
     </main>
